readme file added

--- a/readme
+++ b/readme
@@ -31,4 +31,4 @@ TODO
 
 Credits
 =====
-    This project depends on several libraries each of which have their own license and deserve sincere thanks:
+    This project depends on several libraries each of which have their own license and deserve sincere thanks
