readme file modified

--- a/readme
+++ b/readme
@@ -8,9 +8,9 @@ Please feel free to fork the repo to add anything you want or fix any bugs you'v
 
 License
 =====
-    HoloIRC - Copyright (c) Lalit Maganti 2013-2014
+    devChat - Copyright (c) Santosh Kumar Shaw 2017
 
-    HoloIRC is free software: you can redistribute it and/or modify
+    devChat is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
